--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -624,11 +624,11 @@
             </objects>
             <point key="canvasLocation" x="3461.5999999999999" y="115.59220389805098"/>
         </scene>
-        <!--Item-->
+        <!--My Castts-->
         <scene sceneID="4ce-z3-unE">
             <objects>
-                <navigationController storyboardIdentifier="nav" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qba-MY-KTk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="hRm-lq-x43"/>
+                <navigationController storyboardIdentifier="nav" title="My Castts" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qba-MY-KTk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home" id="hRm-lq-x43"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GnG-Le-s3f">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -644,14 +644,16 @@
         <!--Tab Bar Controller-->
         <scene sceneID="u69-Sq-mvy">
             <objects>
-                <tabBarController id="mr4-4E-ypM" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MadTabBar" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mr4-4E-ypM" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="56i-YO-I0n">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="qba-MY-KTk" kind="relationship" relationship="viewControllers" id="BYS-D7-MEw"/>
+                        <segue destination="Uot-g3-E5O" kind="relationship" relationship="viewControllers" id="5yw-fV-0vc"/>
+                        <segue destination="oQ3-Kp-AOx" kind="relationship" relationship="viewControllers" id="qrA-n4-fIH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hB-wC-gLH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -836,7 +838,24 @@
             </objects>
             <point key="canvasLocation" x="-407.19999999999999" y="2216.9415292353824"/>
         </scene>
-        <!--Twitter Post View Controller-->
+        <!--Create-->
+        <scene sceneID="NSp-ml-HRb">
+            <objects>
+                <navigationController id="kO2-V3-cUf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Create" id="0lK-SZ-RMA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u4L-VY-YkO">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="oQ3-Kp-AOx" kind="relationship" relationship="rootViewController" id="oQO-Jc-3ge"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vd4-ta-Aq5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-36" y="1651"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="A5e-5t-IOl">
             <objects>
                 <viewController storyboardIdentifier="TwitterPostViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="oQ3-Kp-AOx" customClass="TwitterPostViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
@@ -881,7 +900,7 @@
                                         <color key="textColor" red="0.039215686274509803" green="0.34509803921568627" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPy-ed-4lj">
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPy-ed-4lj">
                                         <rect key="frame" x="278" y="2" width="34" height="34"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -948,6 +967,8 @@
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vhM-kK-09C"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Q6h-45-rGZ"/>
+                    <navigationItem key="navigationItem" id="Uby-oY-3zD"/>
                     <connections>
                         <outlet property="facebookBtn" destination="Azj-VP-IFX" id="pSz-C6-XTN"/>
                         <outlet property="inputViewArea" destination="qVQ-eT-KOc" id="0QJ-No-dob"/>
@@ -958,7 +979,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p2S-H4-hR3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1652" y="927.88605697151434"/>
+            <point key="canvasLocation" x="756" y="1652"/>
         </scene>
         <!--Verification Moderator View Controller-->
         <scene sceneID="JQh-xh-8X2">
@@ -1077,7 +1098,7 @@
             </objects>
             <point key="canvasLocation" x="1061.5999999999999" y="2284.4077961019493"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Home-->
         <scene sceneID="cPI-Yr-h5U">
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Uot-g3-E5O" customClass="HomeViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
@@ -1086,7 +1107,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qFE-ao-mEh">
-                                <rect key="frame" x="0.0" y="146" width="375" height="521"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
@@ -1094,24 +1115,13 @@
                                     <outlet property="delegate" destination="Uot-g3-E5O" id="gDZ-AI-DEC"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NAP-Or-iHs">
-                                <rect key="frame" x="320" y="108" width="39" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Menu">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="MenuButtonClicked:" destination="Uot-g3-E5O" eventType="touchUpInside" id="lwR-G6-hAm"/>
-                                </connections>
-                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.047058823529411764" green="0.43529411764705883" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="jfM-Fu-8nO"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" id="3dt-et-euE"/>
                     <navigationItem key="navigationItem" id="yjc-vi-PPv"/>
                     <connections>
                         <outlet property="socialPostList" destination="qFE-ao-mEh" id="Tjf-j0-S0u"/>
-                        <segue destination="oQ3-Kp-AOx" kind="show" id="AWV-Qe-DGW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZRF-ob-EWS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1194,6 +1204,7 @@
         <image name="twitter-group" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="BYS-D7-MEw"/>
+        <segue reference="XiZ-sP-w1o"/>
+        <segue reference="qrA-n4-fIH"/>
     </inferredMetricsTieBreakers>
 </document>
