--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -854,7 +854,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                    <rect key="frame" x="73" y="18" width="280" height="21"/>
+                                                    <rect key="frame" x="73" y="17" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
@@ -1107,6 +1107,7 @@
                         <viewLayoutGuide key="safeArea" id="fwb-Tg-FFx"/>
                     </view>
                     <connections>
+                        <outlet property="inviteModeratorButton" destination="vJi-7A-sbV" id="yfy-g4-JhS"/>
                         <outlet property="moderatorList" destination="PS6-cN-Uqg" id="njM-Ei-Fra"/>
                     </connections>
                 </viewController>
@@ -1405,7 +1406,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AdZ-jB-WsU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="994" y="3313"/>
+            <point key="canvasLocation" x="3225" y="-507"/>
         </scene>
         <!--My Casts-->
         <scene sceneID="cPI-Yr-h5U">
