--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6n-jY-43O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6n-jY-43O">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -190,7 +190,7 @@
                                                 <fragment content="Sign Up">
                                                     <attributes>
                                                         <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <font key="NSFont" size="14" name="VisbyCF-Regular"/>
+                                                        <font key="NSFont" metaFont="system" size="14"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         <integer key="NSUnderline" value="1"/>
                                                     </attributes>
@@ -882,7 +882,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                    <rect key="frame" x="73" y="14" width="280" height="21"/>
+                                                    <rect key="frame" x="73" y="13" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
@@ -1547,21 +1547,21 @@
         <image name="account" width="18" height="18"/>
         <image name="add-new" width="18" height="18"/>
         <image name="back" width="5" height="9"/>
-        <image name="camera" width="66" height="53"/>
-        <image name="chat" width="23" height="21"/>
+        <image name="camera" width="66.5" height="53.5"/>
+        <image name="chat" width="23" height="21.5"/>
         <image name="clips" width="16" height="14"/>
-        <image name="facebook" width="38" height="38"/>
+        <image name="facebook" width="38.5" height="38.5"/>
         <image name="facebook-group" width="15" height="15"/>
         <image name="faq" width="18" height="18"/>
-        <image name="hold" width="16" height="20"/>
+        <image name="hold" width="16.333333969116211" height="20.333333969116211"/>
         <image name="home" width="18" height="18"/>
         <image name="logo" width="138" height="138"/>
         <image name="logout" width="18" height="14"/>
         <image name="membership" width="18" height="18"/>
         <image name="my-account" width="18" height="18"/>
-        <image name="passage-of-time" width="20" height="18"/>
-        <image name="sent-email" width="16" height="14"/>
-        <image name="twitter" width="38" height="38"/>
+        <image name="passage-of-time" width="20" height="18.666666030883789"/>
+        <image name="sent-email" width="16" height="14.5"/>
+        <image name="twitter" width="38.5" height="38.5"/>
         <image name="twitter-group" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
