--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                                                     <fragment content="Log In With">
                                                         <attributes>
                                                             <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <font key="NSFont" size="16" name="VisbyCF-Medium"/>
+                                                            <font key="NSFont" metaFont="system" size="16"/>
                                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineSpacing="19" tighteningFactorForTruncation="0.0"/>
                                                         </attributes>
                                                     </fragment>
@@ -200,7 +200,7 @@
                                                 <fragment content="Sign Up">
                                                     <attributes>
                                                         <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <font key="NSFont" size="14" name="VisbyCF-Regular"/>
+                                                        <font key="NSFont" metaFont="system" size="14"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         <integer key="NSUnderline" value="1"/>
                                                     </attributes>
@@ -247,7 +247,7 @@
         <!--Login Screen View Controller-->
         <scene sceneID="t87-zw-bY4">
             <objects>
-                <viewController id="buw-hF-wT8" customClass="LoginScreenViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginScreenViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="buw-hF-wT8" customClass="LoginScreenViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="02Y-Mo-ET9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -272,7 +272,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VkQ-i8-koG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="728.79999999999995" y="813.64317841079469"/>
+            <point key="canvasLocation" x="695" y="878"/>
+        </scene>
+        <!--Signup Screen View Controller-->
+        <scene sceneID="ZsG-n5-AyI">
+            <objects>
+                <viewController storyboardIdentifier="SignupScreenViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="fp9-xT-PVE" customClass="SignupScreenViewController" customModule="precastr" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="He7-HF-veG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="never" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xkf-F9-rFe">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.047058823529411764" green="0.43529411764705883" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="fp9-xT-PVE" id="WCd-tj-zRr"/>
+                                    <outlet property="delegate" destination="fp9-xT-PVE" id="8E9-Gd-MjL"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.047058823529411764" green="0.43529411764705883" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="121-CB-XXD"/>
+                    </view>
+                    <connections>
+                        <outlet property="signupTableView" destination="xkf-F9-rFe" id="bcg-Ik-YXL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IQj-dg-gDd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1532" y="878"/>
         </scene>
         <!--Signup View Controller-->
         <scene sceneID="Uuw-Ob-4DB">
@@ -349,14 +378,14 @@
                                             <fragment content="I agree with ">
                                                 <attributes>
                                                     <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <font key="NSFont" size="14" name="VisbyCF-Regular"/>
+                                                    <font key="NSFont" metaFont="system" size="14"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                             <fragment content="terms and conditions">
                                                 <attributes>
                                                     <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <font key="NSFont" size="14" name="VisbyCF-Regular"/>
+                                                    <font key="NSFont" metaFont="system" size="14"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                     <integer key="NSUnderline" value="1"/>
                                                 </attributes>
@@ -453,7 +482,7 @@
                                                 <fragment content="Login">
                                                     <attributes>
                                                         <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <font key="NSFont" size="14" name="VisbyCF-Regular"/>
+                                                        <font key="NSFont" metaFont="system" size="14"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         <integer key="NSUnderline" value="1"/>
                                                     </attributes>
@@ -482,7 +511,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tv6-wz-woS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1368.8" y="116.49175412293854"/>
+            <point key="canvasLocation" x="1532" y="116"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pX5-2N-Vat">
@@ -770,7 +799,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QsP-K5-EWu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2985" y="686"/>
+            <point key="canvasLocation" x="3204" y="686"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bTf-qj-4uf">
@@ -786,7 +815,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sBg-Vo-mts" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2137" y="686"/>
+            <point key="canvasLocation" x="2428" y="686"/>
         </scene>
         <!--Cast Moderator View Controller-->
         <scene sceneID="hcE-aK-jZ9">
@@ -868,7 +897,6 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="56i-YO-I0n">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="qba-MY-KTk" kind="relationship" relationship="viewControllers" id="0cb-mg-TdQ"/>
@@ -924,7 +952,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                    <rect key="frame" x="73" y="9" width="280" height="21"/>
+                                                    <rect key="frame" x="73" y="8" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="VisbyCF-Medium" family="Visby CF" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
@@ -1218,7 +1246,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vd4-ta-Aq5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-36" y="1651"/>
+            <point key="canvasLocation" x="-199" y="2310"/>
         </scene>
         <!--Create a new Cast-->
         <scene sceneID="A5e-5t-IOl">
@@ -1335,8 +1363,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p2S-H4-hR3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="756" y="1652"/>
->>>>>>> 651e19f955d5dc11747921ee2b01365697be194e
+            <point key="canvasLocation" x="1646" y="1527"/>
         </scene>
         <!--Create a new Cast-->
         <scene sceneID="KUj-9M-fNA">
@@ -1634,11 +1661,14 @@
         <image name="Moderators" width="18" height="18"/>
         <image name="Terms &amp; Conditions" width="18" height="18"/>
         <image name="account" width="18" height="18"/>
+        <image name="add-new" width="18" height="18"/>
         <image name="add-new-black" width="20" height="20"/>
         <image name="back" width="5" height="9"/>
         <image name="camera" width="66.5" height="53.5"/>
         <image name="chat" width="23" height="21.5"/>
+        <image name="clips" width="16" height="14"/>
         <image name="facebook" width="38.5" height="38.5"/>
+        <image name="facebook-group" width="15" height="15"/>
         <image name="faq" width="18" height="18"/>
         <image name="hold" width="16.333333969116211" height="20.333333969116211"/>
         <image name="home" width="18" height="18"/>
@@ -1651,6 +1681,7 @@
         <image name="passage-of-time" width="20" height="18.666666030883789"/>
         <image name="sent-email" width="16" height="14.5"/>
         <image name="twitter" width="38.5" height="38.5"/>
+        <image name="twitter-group" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="0cb-mg-TdQ"/>
